# ros2-clips-executive

./: .LICENSE  .LICENSE.gpl  .cmakelint.py  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dependency.repos  index.html
clips_executive/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html  user_docs_fundamentals.html  user_docs_getting_started.html  user_docs_plugin_generator.html  user_docs_plugins.html  user_docs_tutorials.html
clips_executive/.doctrees/: environment.pickle  index.doctree  standards.doctree  user_docs.doctree  user_docs_fundamentals.doctree  user_docs_getting_started.doctree  user_docs_plugin_generator.doctree  user_docs_plugins.doctree  user_docs_tutorials.doctree
clips_executive/_sources/: index.rst.txt  user_docs.rst.txt  user_docs_fundamentals.rst.txt  user_docs_getting_started.rst.txt  user_docs_plugin_generator.rst.txt  user_docs_plugins.rst.txt  user_docs_tutorials.rst.txt
clips_executive/doc/: conf.py  index.rst  links.rst
clips_executive/fundamentals/: dynamic.html  index.html  logging.html  node_start.html
clips_executive/getting_started/: configuration.html  dynamic.html  index.html  installation.html  logging.html  usage.html
clips_executive/plugin_generator/: gen_action.html  gen_info.html  gen_msgs.html  gen_srvs.html  index.html
clips_executive/plugins/: config_plugin.html  cx_ament_index.html  executive_plugin.html  file_load_plugin.html  index.html  protobuf_plugin.html  ros_msgs_plugin.html
clips_executive/standard_docs/: LICENSE.html  PACKAGE.html
clips_executive/tutorials/: hello_world.html  index.html  ros_monitoring.html  writing_a_plugin.html
clips_executive/user_docs/: index.html  links.html
cx_blackboard/: CMakeLists.txt  package.xml
cx_blackboard/test/: CMakeLists.txt  test_interface_nodes.cpp  test_utils.h
cx_bringup/: .buildinfo  CMakeLists.txt  README.md  __readme_include.html  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
cx_bringup/.doctrees/: __readme_include.doctree  environment.pickle  index.doctree  standards.doctree
cx_bringup/_sources/: index.rst.txt
cx_bringup/launch/: composition_launch.py  cx_launch.py  cx_launch_demo.py  cx_launch_simple_agent.py  cx_launch_with_manager.py  cx_launch_with_plansys2.py  cx_with_dummy_skill.py  cx_with_skills.py
cx_bringup/params/: clips-executive.yaml  clips_env_manager.yaml  clips_executive.yaml  clips_features_manager.yaml  cx_params.yaml  cx_params.yml  dummy_skiller.yaml  ros_msgs.yaml  simple_agent.yaml
cx_bringup/proto/: BeaconSignal.proto  LockMessage.proto  MachineInstructions.proto  PuckDetectionResult.proto
cx_bringup/scripts/: test_service.py
cx_bringup/src/: cx_node.cpp  plansys2_node.cpp  psys2_launch.cpp
cx_bringup/standard_docs/: PACKAGE.html  README.html
cx_clips/: CMakeLists.txt  package.xml
cx_clips/src/: clips_node.cpp
cx_clips/test/: CMakeLists.txt  clips_manager_test.cpp
cx_clips_env_manager/: .buildinfo  CMakeLists.txt  README.md  __readme_include.html  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
cx_clips_env_manager/.doctrees/: __readme_include.doctree  environment.pickle  index.doctree  standards.doctree
cx_clips_env_manager/_sources/: index.rst.txt
cx_clips_env_manager/src/: clips_env_manager.cpp  clips_node.cpp  clips_plugin_manager.cpp
cx_clips_env_manager/standard_docs/: PACKAGE.html  README.html
cx_clips_executive/: CMakeLists.txt  package.xml
cx_clips_executive/src/: clips_executive_node.cpp
cx_clips_executive/test/: CMakeLists.txt
cx_core/: CMakeLists.txt  package.xml
cx_core/src/: ClipsFeature.cpp
cx_example_skill_nodes/: CMakeLists.txt  package.xml
cx_example_skill_nodes/src/: dummy_skill_launch_node.cpp  skills_launch_node.cpp
cx_features/: CMakeLists.txt  features_plugin.xml  package.xml
cx_features/config_feature/: CMakeLists.txt  README.md  config_feature_plugin.xml  package.xml
cx_features/cx_feature/: CMakeLists.txt  README.md  package.xml
cx_features/example_feature/: CMakeLists.txt  example_feature_plugin.xml  package.xml
cx_features/executive_feature/: CMakeLists.txt  executive_feature_plugin.xml  package.xml
cx_features/feature_manager/: CMakeLists.txt  README.md  features_plugin.xml  package.xml
cx_features/file_load_feature/: CMakeLists.txt  README.md  file_load_feature_plugin.xml  package.xml
cx_features/mock_feature/: CMakeLists.txt  mock_feature_plugin.xml  package.xml
cx_features/pddl_parser_feature/: CMakeLists.txt  package.xml  pddl_parser_feature_plugin.xml
cx_features/plansys2_feature/: CMakeLists.txt  README.md  package.xml  plansys2_feature_plugin.xml
cx_features/protobuf_feature/: CMakeLists.txt  package.xml  protobuf_feature_plugin.xml
cx_features/skill_execution_feature/: CMakeLists.txt  package.xml  skill_execution_feature_plugin.xml
cx_features/src/: features_node.cpp
cx_features/test/: CMakeLists.txt  test_mock_feature.cpp
cx_goal_reasoning/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
cx_goal_reasoning/.doctrees/: environment.pickle  (+2 more)
cx_lifecycle_nodes_manager/: CMakeLists.txt  package.xml
cx_msgs/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
cx_plugin/: .buildinfo  CMakeLists.txt  README.md  __readme_include.html  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
cx_rl_interfaces/: CMakeLists.txt  package.xml
cx_ros_comm_gen/: .buildinfo  CMakeLists.txt  README.md  __readme_include.html  generator.py  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
cx_skill_execution/: CMakeLists.txt  package.xml
cx_utils/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
(+926 files in other folders)
