<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_bringup</name>
  <version>0.0.0</version>
  <description>Central CX bringup scripts and parameters for nodes</description>

  <maintainer email="doychev@kbsg.rwth-aachen.de">Ivaylo Doychev</maintainer>

  <license>GPLv2+ license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch_ros</build_depend>

  <depend>rclcpp</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_lifecycle_manager</depend>
  <depend>cx_feature_manager</depend>
  <depend>cx_clips</depend>
  <depend>cx_clips_executive</depend>
  <depend>pkg-config</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
