<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_clips</name>
  <version>0.0.0</version>
  <description>Manager unit for CLIPS environments and its client wrapper for ease of use</description>

  <maintainer email="doychev@kbsg.rwth-aachen.de">Ivaylo Doychev</maintainer>

  <license>GPLv2+ license</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>PkgConfig</depend>
  <depend>clipsmm</depend>
  <depend>lifecycle_msgs</depend>
  <depend>cx_msgs</depend>
  <depend>cx_core</depend>
  <depend>spdlog</depend>
  <!-- <depend>cx_features</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2run</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
