<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_clips_executive</name>
  <version>0.0.0</version>
  <description>All CLIPS executive relevant files and startup</description>

  <maintainer email="doychev@kbsg.rwth-aachen.de">Ivaylo Doychev</maintainer>

  <license>GPLv2+ license</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pkg-config</depend>
  <depend>cx_clips</depend>
  <depend>cx_utils</depend>
  <depend>lifecycle_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>plansys2_problem_expert</test_depend>
  <test_depend>plansys2_domain_expert</test_depend>
  <test_depend>plansys2_planner </test_depend>
  <test_depend>ros2run</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
