<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_example_skill_nodes</name>
  <version>0.0.0</version>
  <description>Example implemenation of skills to execute from the CX</description>

  <maintainer email="doychev@kbsg.rwth-aachen.de">Ivaylo Doychev</maintainer>

  <license>GPLv2+ license</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>cx_skill_execution</depend>
  <depend>cx_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
